# text_generator

./: .gitignore  Makefile  README.md  pyproject.toml  words_text_gen_model.ipynb
src/: LSTM.py  counts.py  doc2vec.py  models.py  perplexity.py  summary.py  text_generator.py  utils.py
src/model_artifacts/: words_vocab.pkl
src/test/: 644-0.txt  650-0.txt  pg23344.txt  pg699.txt
src/test/charles/: 1289-0.txt  1467-0.txt  27924-0.txt  675-0.txt  98-0.txt  98-1.txt  pg1392.txt  pg1407.txt  pg23344.txt
src/test/doyle/: test.txt
src/test/lincoln/: 8.txt  9.txt
src/test/plato/: pg14970old.txt
src/text_generator/: models.py  perplexity.py  text_generator.py
src/train/: 580-0.txt  650-0.txt  653-0.txt  700-0.txt  766-0.txt  786-0.txt  914-0.txt  967-0.txt  pg676.txt
src/train/charles/: 564-0.txt  678-0.txt  882-0.txt  883-0.txt  917-0.txt  924-0.txt  963-0.txt  98-0-old.txt  98-0.txt  pg1023.txt
src/train/doyle/: 48320-0.txt
src/train/lincoln/: 1.txt  2.txt  3.txt  4.txt  5.txt
src/train/plato/: pg1497 .txt
