[tool.poetry]
name = "text_generator"
version = "0.0.1"
description = ""
license = "MIT"
authors = ["Prateek Pisat <prateekp@known.is>"]
readme = "README.md"
packages = [
    { include = "text_generator", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
keras = "^2.4.3"
nltk = "^3.5"
spacy = "^2.3.2"
gensim = "^3.8.3"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
black = "^19.10b0"
flake8 = "^3.7.9"
isort = "^4.3.21"
mypy = "^0.740"
ptpython = "^2.0.6"
pydocstyle = "^4.0.1"
pytest = "^5.2"
pytest-coverage = "^0.0"

[tool.black]
line_length = 100

[tool.isort]
default_section = 'FIRSTPARTY'
include_trailing_comma = true
indent = '    '
length_sort = false
line_length = 100
multi_line_output = 3
order_by_type = false
known_first_party = 'platform_actions,tests'
known_standard_library = 'dataclasses'
use_parentheses = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
